AUCTION_SYSTEM/auction/src/main/resources/client/css/icons.css
/* ========================================================================
   ICONS STYLES
======================================================================== */

.font-icon {
    -fx-icon-color: -color-primary;
    -fx-icon-size: 24px;                      /* Icon size lg: 24px */
}

.icon-gavel {
    -fx-shape: "M160-120v-80h480v80H160Zm226-194L160-540l84-86 228 226-86 86Zm254-254L414-796l86-84 226 226-86 86Zm184 408L302-682l56-56 522 522-56 56Z";
    -fx-background-color: -color-primary;
    -fx-scale-shape: true;
    -fx-min-width: 50px;                      /* Icon size xl: 50px */
    -fx-min-height: 50px;                     /* Icon size xl: 50px */
    -fx-max-width: 50px;                      /* Icon size xl: 50px */
    -fx-max-height: 50px;                     /* Icon size xl: 50px */
}

.icon-home {
    -fx-shape: "M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon size md: 20px */
    -fx-min-height: 20px;                     /* Icon size md: 20px */
    -fx-max-width: 20px;                      /* Icon size md: 20px */
    -fx-max-height: 20px;                     /* Icon size md: 20px */
}

.icon-search {
    -fx-shape: "M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon size md: 20px */
    -fx-min-height: 20px;                     /* Icon size md: 20px */
    -fx-max-width: 20px;                      /* Icon size md: 20px */
    -fx-max-height: 20px;                     /* Icon size md: 20px */
}

.icon-category {
    -fx-shape: "m260-520 220-360 220 360H260ZM700-80q-75 0-127.5-52.5T520-260q0-75 52.5-127.5T700-440q75 0 127.5 52.5T880-260q0 75-52.5 127.5T700-80Zm-580-20v-320h320v320H120Zm580-60q42 0 71-29t29-71q0-42-29-71t-71-29q-42 0-71 29t-29 71q0 42 29 71t71 29Zm-500-20h160v-160H200v160Zm202-420h156l-78-126-78 126Zm78 0ZM360-340Zm340 80Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon size md: 20px */
    -fx-min-height: 20px;                     /* Icon size md: 20px */
    -fx-max-width: 20px;                      /* Icon size md: 20px */
    -fx-max-height: 20px;                     /* Icon size md: 20px */
}

.icon-art {
    -fx-shape: "M160-80q-33 0-56.5-23.5T80-160v-480q0-33 23.5-56.5T160-720h160l160-160 160 160h160q33 0 56.5 23.5T880-640v480q0 33-23.5 56.5T800-80H160Zm0-80h640v-480H160v480Zm80-80h480L570-440 450-280l-90-120-120 160Zm502.5-217.5Q760-475 760-500t-17.5-42.5Q725-560 700-560t-42.5 17.5Q640-525 640-500t17.5 42.5Q675-440 700-440t42.5-17.5ZM404-720h152l-76-76-76 76ZM160-160v-480 480Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon size md: 20px */
    -fx-min-height: 20px;                     /* Icon size md: 20px */
    -fx-max-width: 20px;                      /* Icon size md: 20px */
    -fx-max-height: 20px;                     /* Icon size md: 20px */
}

.icon-electronic {
    -fx-shape: "M400-560ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720H160v480h80v80h-80Zm640-80v-320H640v320h160Zm-180 80q-25 0-42.5-17.5T560-220v-360q0-25 17.5-42.5T620-640h200q25 0 42.5 17.5T880-580v360q0 25-17.5 42.5T820-160H620Zm100-300q13 0 21.5-9t8.5-21q0-13-8.5-21.5T720-520q-12 0-21 8.5t-9 21.5q0 12 9 21t21 9ZM340-160l-20-70q-19-17-29.5-40T280-320q0-27 10.5-50t29.5-40l20-70h120l20 70q19 17 29.5 40t10.5 50q0 27-10.5 50T480-230l-20 70H340Zm60-100q26 0 43-17.5t17-42.5q0-25-18-42.5T400-380q-24 0-42 17t-18 43q0 26 17 43t43 17Zm320-140Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon width md: 20px */
    -fx-min-height: 16px;                     /* Icon height sm: 16px */
    -fx-max-width: 20px;                      /* Icon width md: 20px */
    -fx-max-height: 16px;                     /* Icon height sm: 16px */
}

.icon-vehicle {
    -fx-shape: "M200-160q-85 0-142.5-57.5T0-360q0-85 58.5-142.5T200-560q77 0 129.5 46T396-400h26l-72-200h-70v-80h200v80h-44l14 40h192l-58-160H480v-80h104q26 0 46.5 14t29.5 38l68 186h32q83 0 141.5 58.5T960-362q0 84-58 143t-142 59q-72 0-126.5-45T564-320H396q-14 69-68 114.5T200-160Zm0-80q41 0 70.5-22.5T312-320H200v-80h112q-12-36-41.5-58T200-480q-51 0-85.5 34.5T80-360q0 50 34.5 85t85.5 35Zm308-160h56q5-23 13.5-43t22.5-37H478l30 80Zm252 160q51 0 85.5-35t34.5-85q0-51-34.5-85.5T760-480h-4l40 106-76 28-38-106q-20 17-31 40t-11 52q0 50 34.5 85t85.5 35ZM196-360Zm564 0Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon width md: 20px */
    -fx-min-height: 16px;                     /* Icon height sm: 16px */
    -fx-max-width: 20px;                      /* Icon width md: 20px */
    -fx-max-height: 16px;                     /* Icon height sm: 16px */
}

.icon-add {
    -fx-shape: "M440-120v-320H120v-80h320v-320h80v320h320v80H520v320h-80Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon width md: 20px */
    -fx-min-height: 20px;                     /* Icon height sm: 16px */
    -fx-max-width: 20px;                      /* Icon width md: 20px */
    -fx-max-height: 20px;                     /* Icon height sm: 16px */
}

.icon-bidder {
    -fx-shape: "M367-527q-47-47-47-113t47-113q47-47 113-47t113 47q47 47 47 113t-47 113q-47 47-113 47t-113-47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Zm80-80h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32Zm296.5-343.5Q560-607 560-640t-23.5-56.5Q513-720 480-720t-56.5 23.5Q400-673 400-640t23.5 56.5Q447-560 480-560t56.5-23.5ZM480-640Zm0 400Z";
    -fx-background-color: -color-icon-theme;  /* Dùng biến dành riêng cho Icon */
    -fx-scale-shape: true;
    -fx-min-width: 20px;                      /* Icon width md: 20px */
    -fx-min-height: 20px;                     /* Icon height sm: 16px */
    -fx-max-width: 20px;                      /* Icon width md: 20px */
    -fx-max-height: 20px;                     /* Icon height sm: 16px */
}

.icon-format-list-bulleted {
    -fx-shape: "M360-200v-80h480v80H360Zm0-240v-80h480v80H360Zm0-240v-80h480v80H360ZM200-160q-33 0-56.5-23.5T120-240q0-33 23.5-56.5T200-320q33 0 56.5 23.5T280-240q0 33-23.5 56.5T200-160Zm0-240q-33 0-56.5-23.5T120-480q0-33 23.5-56.5T200-560q33 0 56.5 23.5T280-480q0 33-23.5 56.5T200-400Zm-56.5-263.5Q120-687 120-720t23.5-56.5Q167-800 200-800t56.5 23.5Q280-753 280-720t-23.5 56.5Q233-640 200-640t-56.5-23.5Z";
    -fx-background-color: -color-icon-theme;
    -fx-scale-shape: true;
    -fx-min-width: 20px;
    -fx-min-height: 20px;
    -fx-max-width: 20px;
    -fx-max-height: 20px;
}

.icon-edit {
    -fx-shape: "M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z";
    -fx-background-color: #8a5500;
    -fx-scale-shape: true;
    -fx-min-width: 18px;
    -fx-min-height: 18px;
    -fx-max-width: 18px;
    -fx-max-height: 18px;
}

.icon-delete {
    -fx-shape: "M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z";
    -fx-background-color: white;
    -fx-scale-shape: true;
    -fx-min-width: 18px;
    -fx-min-height: 18px;
    -fx-max-width: 18px;
    -fx-max-height: 18px;
}

.product-image-placeholder {
    -fx-background-color: -color-icon-theme;
    -fx-min-width: 64px;
    -fx-min-height: 64px;
    -fx-max-width: 64px;
    -fx-max-height: 64px;
}

.product-detail-placeholder {
    -fx-background-color: -color-icon-theme;
    -fx-min-width: 84px;
    -fx-min-height: 84px;
    -fx-max-width: 84px;
    -fx-max-height: 84px;
}

